Updated index.html and server.js for Socket.io functionality

--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Socket.io Example</title>
+    <title>Socket.io Example</title>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        // Connect to the socket server
+        let socket = io();
+
+        // Listen for 'number' events and log the data
+        socket.on('number', (msg) => {
+            console.log('Random number: ' + msg);
+        });
+    </script>
 </head>
 <body>
-  <h1>Socket.io Example</h1>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="env.js"></script>
+    <h1>Socket.io Example</h1>
 </body>
 </html>
